# doclub-tv-test

./: .dockerignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/: env_settings.py
src/common/: page_size.py
src/course/: admin.py  signals.py
src/course/migrations/: 0001_initial.py  0002_alter_module_farm_company.py  0003_alter_module_drugs.py  0004_alter_module_speakers.py  0005_alter_file_options.py  0006_alter_course_drugs_alter_course_lecturers.py  0007_alter_modulecompletion_module_and_more.py  0008_drug_public.py  0009_alter_course_image_alter_drug_public_and_more.py
src/course/models/: __init__.py  certificate.py  course.py  drug.py  farm_company.py  files.py  module.py  module_completions.py
src/course/serializers/: __init__.py  course.py  drug.py  farm_company.py  file.py  module.py  module_completions.py
src/course/views/: __init__.py  course.py  module.py
src/project/: router.py  settings.py  urls.py
src/user/: admin.py
src/user/migrations/: 0001_initial.py  0002_user_image_user_position.py
src/user/models/: user.py
src/user/serializers/: user.py
